gcc/testsuite/rust/compile/issue-4234.rs
// { dg-options "-w" }
#[target_feature(sse)] // { dg-error "attribute can only be applied" }
fn foo() {}